# durian

./: .editorconfig  .golangci.yml  .swiftformat  CHANGELOG.md  MODULE.bazel  README.md
.github/scripts/: BUILD.bazel  encryption-grep-gate.sh
.github/workflows/: release.yml  security.yml  test.yml
cli/: go.mod  go.sum
cli/cmd/durian/: BUILD.bazel  attachment.go  auth.go  contacts.go  draft.go  group.go  master_key.go  root.go  rules.go  search.go  send.go  serve.go  show.go  sync.go  tag.go  tagsync.go  validate.go
cli/cmd/testseeder/: BUILD.bazel  main.go
cli/internal/agekey/: BUILD.bazel  agekey.go  agekey_test.go
cli/internal/auth/: BUILD.bazel  auth.go  auth_test.go
cli/internal/config/: BUILD.bazel  config_test.go  rules.go  types.go  validate.go
cli/internal/config/testdata/: valid_config.pkl
cli/internal/contacts/: BUILD.bazel  db.go  db_test.go  import.go
cli/internal/dbcrypto/: BUILD.bazel  dbcrypto.go  dbcrypto_test.go  keyring.go  tokenize.go  tokenize_test.go
cli/internal/draft/: BUILD.bazel  draft.go
cli/internal/encoding/: BUILD.bazel
cli/internal/handler/: BUILD.bazel  contacts.go  convert_thread_test.go  drafts.go  drafts_test.go  error_sanitize.go  error_sanitize_test.go  events.go  handler.go  handler_test.go  http.go  http_test.go  outbox.go  ratelimit.go  ratelimit_test.go  search.go  show.go  tag.go  tags.go  watcher.go  watcher_test.go
cli/internal/imap/: BUILD.bazel  attachment.go  attachment_test.go  client.go  exec.go  exec_test.go  rules.go  rules_test.go  state.go  sync.go  sync_discovery.go  sync_flags.go  sync_mailbox.go  sync_store.go  sync_test.go
cli/internal/keychain/: BUILD.bazel  keychain.go  keychain_darwin_test.go
cli/internal/mail/: BUILD.bazel  parser.go  parser_test.go  types.go
cli/internal/mail/testdata/: singlepart_zip_dmarc.eml
cli/internal/oauth/: BUILD.bazel  flow.go  keychain.go  provider.go
cli/internal/protocol/: BUILD.bazel  response.go  response_test.go  server_test.go
cli/internal/redact/: BUILD.bazel  keys.go  redact.go  redact_test.go  sync_test.go
cli/internal/sanitize/: BUILD.bazel  fixture_test.go  quote.go  quote_test.go  sanitize_test.go
cli/internal/smtp/: BUILD.bazel  client.go  mime.go  smtp_test.go
cli/internal/store/: BUILD.bazel  attachments.go  attachments_test.go  headers.go  local_drafts.go  messages.go  messages_test.go  migrate_audit_test.go  outbox.go  outbox_test.go  search.go  search_filter.go  search_test.go  store.go  store_test.go  tags.go  tags_test.go  threads_test.go  types.go
cli/internal/tagsync/: BUILD.bazel  client_test.go
docs/: go.mod  keymaps-example.pkl
docs/content/: _index.md  privacy.md  security.md
docs/content/docs/: getting-started.md
docs/content/docs/cli/: encryption-at-rest.md  reference.md
docs/content/docs/configuration/: config.md  keymaps.md  rules.md
docs/content/docs/developers/: _index.md  architecture.md
docs/content/docs/developers/design/: 0001-mail-content-encryption-at-rest.md  _index.md
docs/content/docs/gui/: search.md
integration/: integration_test.sh
linux/: qt_repo.bzl
macos/durian/: ContentView.swift  DurianApp.swift
macos/durian/Keymaps/: KeyBuffer.swift  KeySequenceEngine.swift  KeymapHandler.swift  KeymapTypes.swift  KeymapsManager.swift  SequenceMatcher.swift
macos/durian/Managers/: AccountManager.swift  AttachmentCacheManager.swift  AvatarManager.swift  ConfigManager.swift  ContactsManager.swift  DraftService.swift  EmailSendingManager.swift  NetworkMonitor.swift  OutboxManager.swift  ProfileManager.swift  SearchManager.swift  SettingsManager.swift  SyncManager.swift
macos/durian/Models/: AttachmentModels.swift  EmailComposition.swift  EmailDraftFactory.swift  Mail.swift
macos/durian/Network/: EmailBackend.swift  MailBackendProtocol.swift
macos/durian/Utilities/: AddressUtils.swift  ColorExtensions.swift  FileManager+Extensions.swift  KeychainHelper.swift  QuickLookPreview.swift  ScrollViewFinder.swift  ScrollViewModifiers.swift  WindowCloseGuard.swift
macos/durian/Views/: AvatarView.swift  BannerView.swift  ComposeForm+Contacts.swift  ComposeForm.swift  ComposeFormSubviews.swift  ComposeToolbar.swift  ComposeWindow.swift  ContactSuggestionController.swift  ContactSuggestionPopup.swift  EditableWebView.swift  EditableWebViewHTML.swift  EmailDetailView.swift  EmailListView.swift  EmailRowView.swift  NonScrollingWebView.swift  SearchPopupView.swift  ThreadMessageCardView.swift  TokenField.swift
macos/tests/: AccountManagerTests.swift  AttachmentCacheManagerTests.swift  BannerManagerTests.swift  ConfigTests.swift  ContactsManagerTests.swift  EmailSendingManagerTests.swift  EmailSendingTests.swift  IntegrationTests.swift  KeyBufferTests.swift  KeymapsMergeTests.swift  ModelTests.swift  OutboxManagerTests.swift  ProfileTests.swift  SearchManagerTests.swift  SequenceMatcherTests.swift  SyncManagerTests.swift
schema/: Config.pkl  Keymaps.pkl
sync/: BUILD.bazel  main.go
