load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "sync_lib",
    srcs = ["main.go"],
    importpath = "github.com/julion2/durian/sync",
    deps = ["@org_modernc_sqlite//:sqlite"],
)

go_binary(
    name = "durian-sync",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "sync_test",
    size = "small",
    srcs = ["main_test.go"],
    embed = [":sync_lib"],
)

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = ["@org_modernc_sqlite//:sqlite"],
)

go_test(
    name = "lib_test",
    srcs = ["main_test.go"],
    embed = [":lib"],
)
