load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "durian_lib",
    srcs = [
        "attachment.go",
        "auth.go",
        "completion.go",
        "contacts.go",
        "draft.go",
        "group.go",
        "help.go",
        "main.go",
        "manpage.go",
        "master_key.go",
        "root.go",
        "rules.go",
        "search.go",
        "send.go",
        "serve.go",
        "show.go",
        "sync.go",
        "tag.go",
        "tagsync.go",
        "validate.go",
    ],
    importpath = "github.com/durian-dev/durian/cli/cmd/durian",
    visibility = ["//visibility:private"],
    deps = [
        "//cli/internal/agekey",
        "//cli/internal/auth",
        "//cli/internal/config",
        "//cli/internal/contacts",
        "//cli/internal/dbcrypto",
        "//cli/internal/draft",
        "//cli/internal/handler",
        "//cli/internal/imap",
        "//cli/internal/keychain",
        "//cli/internal/mail",
        "//cli/internal/oauth",
        "//cli/internal/protocol",
        "//cli/internal/redact",
        "//cli/internal/smtp",
        "//cli/internal/store",
        "//cli/internal/tagsync",
        "@com_github_emersion_go_imap//:go-imap",
        "@com_github_fatih_color//:color",
        "@com_github_gorilla_mux//:mux",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_cobra//doc",
        "@org_golang_x_term//:term",
    ],
)

go_binary(
    name = "durian",
    embed = [":durian_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "main.version": "{STABLE_VERSION}",
        "main.gitCommit": "{STABLE_GIT_COMMIT}",
        "main.gitDirty": "{STABLE_GIT_DIRTY}",
    },
)
