load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "testseeder_lib",
    srcs = ["main.go"],
    importpath = "github.com/durian-dev/durian/cli/cmd/testseeder",
    visibility = ["//visibility:private"],
    deps = [
        "//cli/internal/contacts",
        "//cli/internal/dbcrypto",
        "//cli/internal/store",
    ],
)

go_binary(
    name = "testseeder",
    embed = [":testseeder_lib"],
    visibility = ["//visibility:public"],
)
