load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "auth",
    srcs = ["auth.go"],
    importpath = "github.com/julion2/durian/cli/internal/auth",
    visibility = ["//cli:__subpackages__"],
    deps = [
        "//cli/internal/config",
        "//cli/internal/keychain",
        "//cli/internal/oauth",
        "//cli/internal/smtp",
    ],
)

go_test(
    name = "auth_test",
    size = "small",
    srcs = ["auth_test.go"],
    embed = [":auth"],
    deps = [
        "//cli/internal/config",
        "//cli/internal/keychain",
        "//cli/internal/oauth",
        "//cli/internal/smtp",
    ],
)
