load("@rules_go//go:def.bzl", "go_library", "go_test")

genrule(
    name = "copy_schemas",
    srcs = ["//schema:pkl_schemas"],
    outs = [
        "schema/Config.pkl",
        "schema/Groups.pkl",
        "schema/Keymaps.pkl",
        "schema/Profiles.pkl",
        "schema/Rules.pkl",
    ],
    cmd = "for f in $(SRCS); do cp $$f $(@D)/schema/$$(basename $$f); done",
)

go_library(
    name = "config",
    srcs = [
        "config.go",
        "groups.go",
        "helpers.go",
        "keymaps.go",
        "pkl.go",
        "profiles.go",
        "rules.go",
        "types.go",
        "validate.go",
    ],
    embedsrcs = [
        "schema/Config.pkl",
        "schema/Groups.pkl",
        "schema/Keymaps.pkl",
        "schema/Profiles.pkl",
        "schema/Rules.pkl",
    ],
    importpath = "github.com/julion2/durian/cli/internal/config",
    visibility = ["//cli:__subpackages__"],
    deps = ["@com_github_apple_pkl_go//pkl"],
)

go_test(
    name = "config_test",
    size = "small",
    srcs = [
        "config_test.go",
        "groups_test.go",
        "validate_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":config"],
)
