load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "contacts",
    srcs = [
        "db.go",
        "import.go",
        "types.go",
    ],
    importpath = "github.com/julion2/durian/cli/internal/contacts",
    visibility = ["//cli:__subpackages__"],
    deps = [
        "//cli/internal/dbcrypto",
        "//cli/internal/store",
        "@com_github_google_uuid//:uuid",
        "@org_modernc_sqlite//:sqlite",
    ],
)

go_test(
    name = "contacts_test",
    size = "small",
    srcs = ["db_test.go"],
    embed = [":contacts"],
    deps = ["//cli/internal/dbcrypto"],
)
