load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dbcrypto",
    srcs = [
        "dbcrypto.go",
        "keyring.go",
        "tokenize.go",
    ],
    importpath = "github.com/julion2/durian/cli/internal/dbcrypto",
    visibility = ["//cli:__subpackages__"],
    deps = ["@com_github_rivo_uniseg//:uniseg"],
)

go_test(
    name = "dbcrypto_test",
    size = "small",
    srcs = [
        "dbcrypto_test.go",
        "tokenize_test.go",
    ],
    embed = [":dbcrypto"],
)
