load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "draft",
    srcs = ["draft.go"],
    importpath = "github.com/julion2/durian/cli/internal/draft",
    visibility = ["//cli:__subpackages__"],
    deps = [
        "//cli/internal/config",
        "//cli/internal/imap",
        "//cli/internal/smtp",
        "@com_github_emersion_go_imap//:go-imap",
    ],
)

go_test(
    name = "draft_test",
    size = "small",
    srcs = ["draft_test.go"],
    embed = [":draft"],
)
