load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "handler",
    srcs = [
        "contacts.go",
        "drafts.go",
        "events.go",
        "handler.go",
        "http.go",
        "outbox.go",
        "ratelimit.go",
        "search.go",
        "show.go",
        "tag.go",
        "tags.go",
        "watcher.go",
    ],
    importpath = "github.com/durian-dev/durian/cli/internal/handler",
    visibility = ["//cli:__subpackages__"],
    deps = [
        "//cli/internal/auth",
        "//cli/internal/config",
        "//cli/internal/contacts",
        "//cli/internal/encoding",
        "//cli/internal/imap",
        "//cli/internal/mail",
        "//cli/internal/protocol",
        "//cli/internal/sanitize",
        "//cli/internal/smtp",
        "//cli/internal/store",
        "//cli/internal/tagsync",
        "@com_github_emersion_go_imap//:go-imap",
        "@com_github_gorilla_mux//:mux",
    ],
)

go_test(
    name = "handler_test",
    size = "small",
    srcs = [
        "convert_thread_test.go",
        "drafts_test.go",
        "handler_test.go",
        "http_test.go",
        "ratelimit_test.go",
        "watcher_test.go",
    ],
    embed = [":handler"],
    deps = [
        "//cli/internal/contacts",
        "//cli/internal/dbcrypto",
        "//cli/internal/protocol",
        "//cli/internal/store",
        "@com_github_emersion_go_imap//:go-imap",
        "@com_github_gorilla_mux//:mux",
    ],
)
