load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "imap",
    srcs = [
        "attachment.go",
        "client.go",
        "exec.go",
        "flags.go",
        "rules.go",
        "state.go",
        "sync.go",
        "sync_discovery.go",
        "sync_flags.go",
        "sync_mailbox.go",
        "sync_store.go",
    ],
    importpath = "github.com/durian-dev/durian/cli/internal/imap",
    visibility = ["//cli:__subpackages__"],
    deps = [
        "//cli/internal/config",
        "//cli/internal/keychain",
        "//cli/internal/mail",
        "//cli/internal/oauth",
        "//cli/internal/store",
        "@com_github_emersion_go_imap//:go-imap",
        "@com_github_emersion_go_imap//client",
        "@com_github_emersion_go_sasl//:go-sasl",
    ],
)

go_test(
    name = "imap_test",
    size = "small",
    srcs = [
        "attachment_test.go",
        "exec_test.go",
        "flags_test.go",
        "gmail_test.go",
        "rules_test.go",
        "state_test.go",
        "sync_test.go",
    ],
    embed = [":imap"],
    deps = [
        "//cli/internal/config",
        "//cli/internal/store",
        "@com_github_emersion_go_imap//:go-imap",
    ],
)
