load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "keychain",
    srcs = [
        "keychain.go",
        "keychain_darwin.go",
        "keychain_linux.go",
    ],
    importpath = "github.com/julion2/durian/cli/internal/keychain",
    visibility = ["//cli:__subpackages__"],
)

go_test(
    name = "keychain_test",
    size = "small",
    srcs = ["keychain_darwin_test.go"],
    embed = [":keychain"],
)
