load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mail",
    srcs = [
        "parser.go",
        "types.go",
    ],
    importpath = "github.com/julion2/durian/cli/internal/mail",
    visibility = ["//cli:__subpackages__"],
    deps = [
        "//cli/internal/encoding",
        "//cli/internal/sanitize",
    ],
)

go_test(
    name = "mail_test",
    size = "small",
    srcs = ["parser_test.go"],
    data = glob(["testdata/**"]),
    embed = [":mail"],
)
