load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "redact",
    srcs = [
        "keys.go",
        "redact.go",
    ],
    importpath = "github.com/julion2/durian/cli/internal/redact",
    visibility = ["//cli:__subpackages__"],
)

go_test(
    name = "redact_test",
    size = "small",
    srcs = [
        "redact_test.go",
        "sync_test.go",
    ],
    data = ["//.github/scripts:encryption-grep-gate.sh"],
    embed = [":redact"],
)
