load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sanitize",
    srcs = [
        "quote.go",
        "sanitize.go",
        "signature.go",
    ],
    importpath = "github.com/julion2/durian/cli/internal/sanitize",
    visibility = ["//cli:__subpackages__"],
    deps = ["@com_github_microcosm_cc_bluemonday//:bluemonday"],
)

go_test(
    name = "sanitize_test",
    size = "small",
    srcs = [
        "fixture_test.go",
        "quote_test.go",
        "sanitize_test.go",
        "signature_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":sanitize"],
)
