load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "smtp",
    srcs = [
        "client.go",
        "mime.go",
    ],
    importpath = "github.com/julion2/durian/cli/internal/smtp",
    visibility = ["//cli:__subpackages__"],
    deps = ["@com_github_google_uuid//:uuid"],
)

go_test(
    name = "smtp_test",
    size = "small",
    srcs = ["smtp_test.go"],
    embed = [":smtp"],
)
