load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "store",
    srcs = [
        "attachments.go",
        "headers.go",
        "local_drafts.go",
        "messages.go",
        "outbox.go",
        "search.go",
        "store.go",
        "tags.go",
        "threads.go",
        "types.go",
    ],
    importpath = "github.com/durian-dev/durian/cli/internal/store",
    visibility = ["//cli:__subpackages__"],
    deps = [
        "//cli/internal/dbcrypto",
        "@org_modernc_sqlite//:sqlite",
    ],
)

go_test(
    name = "store_test",
    srcs = [
        "attachments_test.go",
        "headers_test.go",
        "local_drafts_test.go",
        "messages_test.go",
        "outbox_test.go",
        "search_test.go",
        "store_test.go",
        "tags_test.go",
        "threads_test.go",
    ],
    embed = [":store"],
    deps = ["//cli/internal/dbcrypto"],
)
